# traffic-analysis

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  run_local.bat  run_local.ps1  run_pipeline.bat
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  logging.py  metrics.py  security.py
backend/app/features/anomalies/: __init__.py  agents.py  models.py  router.py  schemas.py  service.py
backend/app/features/auth/: __init__.py  models.py
backend/app/features/health/: __init__.py  router.py  service.py
backend/app/features/traffic/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/middleware/: metrics.py  request_id.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: .gitkeep  0001_initial_schema.py
backend/app/models/: base.py
backend/tests/: conftest.py
backend/tests/integration/: test_traffic_api.py
backend/tests/unit/: test_health.py
data/: pyproject.toml
data/jobs/: __init__.py  detect_anomalies.py  process_events.py  simulate_traffic.py
data/schemas/: traffic_event.py
data/simulation/: __init__.py  engine.py  generator.py  models.py  profiles.py
data/utils/: spark_session.py
e2e/: package.json  playwright.config.ts
e2e/tests/: health.spec.ts
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: Button.tsx
frontend/src/features/dashboard/: Dashboard.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: utils.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
